Bug 151040 - Logo in Start Center initially shows correctly but then only shows some pixels after returning from a LibreOffice application
Summary: Logo in Start Center initially shows correctly but then only shows some pixel...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Heiko Tietze
URL:
Whiteboard: target:25.8.0 target:25.2.2
Keywords: bibisected, bisected, regression
: 164387 (view as bug list)
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2022-09-18 11:31 UTC by Hussam Al-Tayeb
Modified: 2025-03-27 18:28 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
start center showing lines instead of links. (199.05 KB, image/png)
2022-09-18 11:33 UTC, Hussam Al-Tayeb
Details
Correct rendering (173.30 KB, image/png)
2022-12-11 05:45 UTC, Hussam Al-Tayeb
Details
Incorrect rendering (167.74 KB, image/png)
2022-12-11 05:45 UTC, Hussam Al-Tayeb
Details
screenshot (213.71 KB, image/png)
2025-01-06 08:43 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hussam Al-Tayeb 2022-09-18 11:31:12 UTC
Description:
I just compiled libreoffice master branch and the support links lower left are unreadable.

Steps to Reproduce:
1. Compile Libreoffice from source and open it.
2. Look at the lower left.
3. Click on the small lines.
4. See attached screenshot.

Actual Results:
There are lines instead of link text.

Expected Results:
There should be text with the links.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
There should be text with the links.
Comment 1 Hussam Al-Tayeb 2022-09-18 11:33:34 UTC
Created attachment 182531 [details]
start center showing lines instead of links.

For anyone trying to reproduce this issue, kindly note that this is fresh build some source code, and so your own build may be older.
Also please try with gtk 3.24.30 with default adwaita theme.
Comment 2 raal 2022-10-17 20:47:49 UTC
No repro Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 2e887e04c0008a4eb6cbf34050b6fa463a33599f
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 Hussam Al-Tayeb 2022-10-17 21:37:59 UTC
I can still reproduce it.
Try the following.

- Open libreoffice writer.
- Open one of your documents.
- Close it to go back to the start center.
- Look at the bottom right. The image is missing.
- Close libreoffice and open start center alone. The image is showing.
- Once you open a file and close it, the image stops showing again.
Comment 4 raal 2022-10-17 21:50:10 UTC
(In reply to Hussam Al-Tayeb from comment #3)
> I can still reproduce it.
> Try the following.
> 
> - Open libreoffice writer.
> - Open one of your documents.
> - Close it to go back to the start center.
> - Look at the bottom right. The image is missing.
> - Close libreoffice and open start center alone. The image is showing.
> - Once you open a file and close it, the image stops showing again.

Thanks for the steps, but still cannot reproduce on my PC.
Comment 5 Hussam Al-Tayeb 2022-10-17 21:58:38 UTC
Thank you for the followup.

I'll just wait for developer insight then.

Thanks again!
Comment 6 Hussam Al-Tayeb 2022-12-11 05:45:30 UTC
Created attachment 184086 [details]
Correct rendering
Comment 7 Hussam Al-Tayeb 2022-12-11 05:45:48 UTC
Created attachment 184087 [details]
Incorrect rendering
Comment 8 Hussam Al-Tayeb 2022-12-11 05:48:21 UTC
- Run soffice from command line. The images show correctly https://bugs.documentfoundation.org/attachment.cgi?id=184086
- Click on "Writer Document" from the left panel. Do not type any text or save.
- Close the document to go back to the start center. The images don't show now.
https://bugs.documentfoundation.org/attachment.cgi?id=184087
Comment 9 Hussam Al-Tayeb 2022-12-11 05:49:43 UTC
(In reply to Hussam Al-Tayeb from comment #8)
> - Run soffice from command line. The images show correctly
> https://bugs.documentfoundation.org/attachment.cgi?id=184086
> - Click on "Writer Document" from the left panel. Do not type any text or
> save.
> - Close the document to go back to the start center. The images don't show
> now.
> https://bugs.documentfoundation.org/attachment.cgi?id=184087

This is with a fresh build from libreoffice-7-5 branch

@caolan, is it possible you can take a look? You've fixed such weird bugs in that past. Thank you.
Comment 10 Caolán McNamara 2022-12-11 16:06:26 UTC
I'm not able to reproduce with libreoffice-7-5. Was there any particular options passed to autogen.sh/configure ?
Comment 11 Hussam Al-Tayeb 2022-12-11 17:08:00 UTC
    ./configure \
        --enable-split-app-modules \
        --with-parallelism=8 \
        --with-external-tar="../../ext_sources" \
        --enable-release-build \
        --prefix=/usr --exec-prefix=/usr --sysconfdir=/etc \
        --libdir=/usr/lib --mandir=/usr/share/man \
        --with-lang=en-US \
        --with-help=html \
        --disable-avahi \
        --enable-dbus \
        --enable-evolution2 \
        --enable-gio \
        --enable-gtk3 \
        --enable-introspection \
        --enable-openssl \
        --disable-odk \
        --enable-python=system \
        --enable-scripting-beanshell \
        --enable-scripting-javascript \
        --enable-dconf \
        --disable-report-builder \
        --disable-ext-wiki-publisher \
        --disable-ext-nlpsolver --enable-lpsolve --enable-coinmp \
        --without-system-coinmp --without-system-lpsolve \
        --without-fonts \
        --without-system-libcdr --without-system-libqxp \
        --without-system-mdds --without-system-librevenge \
        --with-system-poppler \
        --without-myspell-dicts \
        --without-system-libvisio --without-system-libpagemaker \
        --without-system-libcmis --without-system-libepubgen \
        --without-system-libmspub --without-system-libwpd \
        --without-system-libexttextcat --without-system-libstaroffice \
        --without-system-orcus --without-system-libzmf \
        --without-system-liblangtag \
        --without-system-libodfgen \
        --without-system-libmwaw \
        --without-system-libetonyek \
        --without-system-libfreehand \
        --enable-firebird-sdbc \
        --without-system-firebird --without-system-libtommath \
        --enable-postgresql-sdbc --with-system-postgresql \
        --with-system-mariadb \
        --disable-bundle-mariadb \
        --with-system-libatomic-ops \
        --without-system-libebook \
        --without-system-libabw \
        --with-system-expat \
        --with-system-dicts \
        --with-external-dict-dir=/usr/share/hunspell \
        --with-external-hyph-dir=/usr/share/hyphen \
        --with-external-thes-dir=/usr/share/mythes \
        --without-system-beanshell \
        --without-system-cppunit \
        --with-system-graphite \
        --without-system-glm \
        --without-system-libwpg \
        --without-system-libwps \
        --without-system-redland \
        --with-jdk-home="/usr/lib/jvm/default" \
        --with-system-boost \
        --with-system-icu \
        --with-system-cairo \
        --with-system-libs \
        --with-system-mythes \
        --with-system-headers \
        --without-system-clucene \
        --disable-dependency-tracking --with-system-harfbuzz \
        --without-junit --with-system-odbc --with-system-xmlsec \
        --disable-qt5 --enable-pdfium \
        --disable-epm --with-product-name=LibreOffice \
        --without-system-libnumbertext \
        --disable-gtk3-kde5  \
        --without-system-box2d --disable-community-flavor \
        --enable-opencl \
        --enable-option-checking \
        --without-system-abseil --with-system-openjpeg \
        --enable-ccache \
        --enable-mergelibs \
        --without-system-dragonbox \
        --without-system-libfixmath \
        --without-system-zxing --enable-zxing
Comment 12 Hussam Al-Tayeb 2022-12-11 17:09:31 UTC
gtk version is 3.24.35
Comment 13 Caolán McNamara 2022-12-12 09:14:23 UTC
I built with the same flags, but it still doesn't reproduce for me. A strange one.
Comment 14 Hussam Al-Tayeb 2022-12-12 09:27:30 UTC
Additionally, if I start soffice with SAL_USE_VCLPLUGIN=gen, the problem doesn't
happen.
Comment 15 stragu 2023-04-14 22:56:42 UTC
Can't reproduce on Ubuntu 20.04 with GNOME 3.36.8, Adwaita, and lo 7.5.2.2.
The steps are very similar to bug 143673, which was fixed in 7.5.0.
Comment 16 Hussam Al-Tayeb 2023-04-15 05:20:35 UTC
(In reply to Stéphane Guillou (stragu) from comment #15)
> Can't reproduce on Ubuntu 20.04 with GNOME 3.36.8, Adwaita, and lo 7.5.2.2.
> The steps are very similar to bug 143673, which was fixed in 7.5.0.

Thanks. I fixed the title so that it better represents the issue.
Comment 17 Adam 2023-12-09 22:37:30 UTC
UI: en-US

The logo looks fine all the time.


UI: pl-PL

The logo is partially hidden after going back to the start menu.


LO 7.6.4 x64
Windows 10 22H2 x64
Comment 18 Buovjaga 2024-12-30 18:06:00 UTC
(In reply to Kityn from comment #17)
> UI: en-US
> 
> The logo looks fine all the time.
> 
> 
> UI: pl-PL
> 
> The logo is partially hidden after going back to the start menu.
> 
> 
> LO 7.6.4 x64
> Windows 10 22H2 x64

Repro with both English (US) and Polish UI. About 1/3 of the bottom of the logo is cut off after opening Writer and closing to Start Center. This started happening with commit 4b3995bf5d0058ec70e35679abf1940a5c0e2f69
Resolves tdf#161796 - Add a donate button to the start center

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7408508758d3e88fde78f205a28d67ebff3f47d4
CPU threads: 2; OS: Windows 11 X86_64 (build 22621); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: pl-PL
Calc: threaded
Comment 19 Buovjaga 2024-12-30 18:11:05 UTC
Reverting last changes as this is older than Heiko's commit.
Comment 20 Heiko Tietze 2025-01-06 08:04:03 UTC
No issue with kf6 for UI en/de and ShowDonation on/off.
Comment 21 BogdanB 2025-01-06 08:43:32 UTC
Created attachment 198389 [details]
screenshot

Logo perfect. Open a new document and close. This is after the document is closed.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 55f7845b9922e1dec3818579a4445e25a27c7e17
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: x11
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 22 BogdanB 2025-01-06 08:44:39 UTC
But, it is ok with gtk3
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 55f7845b9922e1dec3818579a4445e25a27c7e17
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 23 Xisco Faulí 2025-02-25 09:12:19 UTC
This issue is reproduced with GEN environment or on Windows

Issue introduced by

commit 4b3995bf5d0058ec70e35679abf1940a5c0e2f69	[log]
author	Heiko Tietze <heiko.tietze@documentfoundation.org>	Thu Jun 27 13:21:59 2024 +0200
committer	Heiko Tietze <heiko.tietze@documentfoundation.org>	Mon Jul 01 09:09:10 2024 +0200
tree 76b47442205864146dbb8224f3a176ad20e10ad9
parent c65127e5f6efcc5db93d2f80b9592f458200d596 [diff]

Resolves tdf#161796 - Add a donate button to the start center

if I remove this part of the code, then the issue is not reproducible

--- a/sfx2/source/dialog/backingwindow.cxx
+++ b/sfx2/source/dialog/backingwindow.cxx
@@ -195,19 +195,6 @@ BackingWindow::BackingWindow(vcl::Window* i_pParent)
     mxHelpButton->connect_clicked(LINK(this, BackingWindow, ClickHelpHdl));
 
     // tdf#161796 replace the extension button with a donate button
-    if (officecfg::Office::Common::Misc::ShowDonation::get())
-    {
-        mxExtensionsButton->hide();
-        mxDonateButton->show();
-        mxDonateButton->set_from_icon_name(BMP_DONATE);
-        OUString sDonate(SfxResId(STR_DONATE_BUTTON));
-        if (sDonate.getLength() > 8)
-        {
-            mxDonateButton->set_tooltip_text(sDonate);
-            sDonate = OUString::Concat(sDonate.subView(0, 7)) + "...";
-        }
-        mxDonateButton->set_label(sDonate);
-    }
 
     mxDropTarget = mxAllRecentThumbnails->GetDropTarget();

@Heiko, could you please take a look ?
Comment 24 Commit Notification 2025-03-05 06:24:59 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ffd552926b381591972d2db55c16e57569cde98a

Resolves tdf#151040 - Brand image misplaced in Start Center

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 25 Buovjaga 2025-03-05 08:47:28 UTC
Thanks, now it's gone in gen.

Arch Linux 64-bit
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ffd552926b381591972d2db55c16e57569cde98a
CPU threads: 8; OS: Linux 6.13; UI render: default; VCL: x11
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 5 March 2025
Comment 26 Heiko Tietze 2025-03-05 09:22:01 UTC
*** Bug 164387 has been marked as a duplicate of this bug. ***
Comment 27 Commit Notification 2025-03-06 13:41:37 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/6a2cf7e304c3910b41dea482ed6880e7e7611ed8

Resolves tdf#151040 - Brand image misplaced in Start Center

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 Adam 2025-03-27 18:28:51 UTC
The fix is working. Thanks!