Resolves tdf#151040 - Brand image misplaced in Start Center

Change-Id: If2c4e0e5fa2e5be11bc82d41734c09bcdd3fe804
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182463
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins
(cherry picked from commit ffd552926b381591972d2db55c16e57569cde98a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182520
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>